dotnetapp/dotnetapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapp-service
spec:
  type: ClusterIP
  selector:
    app: dotnetapp
  ports:
    - protocol: TCP
      port: 801
      targetPort: 80
